--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -18,6 +18,25 @@ h6{font-size: 1.4rem; letter-spacing: 0; line-height: 1.2}
 
 body {
   background-color: #111315;
+  color: white;
+}
+
+.orange {
+  color: #FF961E;
+}
+
+.center-block {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -165px;
+  margin-top: -65px;
+}
+
+.bottom-message {
+  position: absolute;
+  bottom: 0px;
+  right: 30px;
 }
 
 .container{
